--- a/src/css/ques.css
+++ b/src/css/ques.css
@@ -110,3 +110,41 @@
   border-radius: 4px;
   margin: 1rem;
 }
+
+@media (max-width: 876px) {
+  .end {
+    display: none;
+  }
+  .Qpanel {
+    min-width: 90%;
+  }
+  .flag {
+    position: relative;
+    top: 4rem;
+    left: 10%;
+  }
+  .skip {
+    position: absolute;
+    top: 4rem;
+    right: 10%;
+  }
+  .question {
+    font-size: 1rem;
+    padding: 1rem;
+  }
+  .option {
+    min-width: 15rem;
+    padding: 0.5rem 3rem;
+    margin: 1rem;
+  }
+  .pagNo {
+    margin: 6rem 4rem;
+    display: block;
+    overflow-x: auto;
+    padding: 1.2rem 0;
+  }
+  .left,
+  .right {
+    top: 66%;
+  }
+}
