--- a/src/css/home.css
+++ b/src/css/home.css
@@ -17,6 +17,9 @@ body {
 .name {
   padding: 0.5rem 4rem;
   border-radius: 1rem;
+  text-align: center;
+    box-shadow: 0px 2px 4px #00d7ff;
+    border: none;
 }
 
 .submit {
@@ -32,10 +35,12 @@ body {
   background-color: grey;
   padding: 0.5rem 2.5rem;
   border-radius: 4px;
+  transition-duration: 1s;
 }
 
 .start:hover {
   background-color: rgb(53, 51, 51);
+  transform: scale(1.1);
 }
 
 .down {
