--- a/src/css/home.css
+++ b/src/css/home.css
@@ -24,28 +24,28 @@ body {
   padding: 0.5rem 4rem;
   border-radius: 1rem;
   text-align: center;
-    box-shadow: 0px 2px 4px #00d7ff;
+    box-shadow: 0px 2px 4px #067588;
     border: none;
 }
 
 .submit {
   display: flex;
   justify-content: center;
-  margin: 1rem;
+  margin: 0.8rem;
 }
 
 .start {
-  color: white;
+  color: rgb(211, 204, 204);
   font-size: 1.2rem;
   text-decoration: none;
-  background-color: grey;
-  padding: 0.5rem 2.5rem;
+  background-color: rgb(91, 90, 90);
+  padding: 0.6rem 2.7rem;
   border-radius: 4px;
-  transition-duration: 1s;
+  transition-duration: 1.1s;
 }
 
 .start:hover {
-  background-color: #f0ce85;
+  background-color: #372705;
   transform: scale(1.1);
 }
 
