--- a/src/css/ques.css
+++ b/src/css/ques.css
@@ -6,8 +6,8 @@
 
 .question {
   font-size: 3rem;
-  background-color: rgb(124, 37, 127);
-  border-radius: 12px;
+  background-color: rgb(244 221 170);
+  border-radius: 18px;
 
   text-align: center;
   border: 2px solid gray;
@@ -36,9 +36,10 @@
 
 .questionNo {
   font-size: 2rem;
-  color: white;
+  color: black;
   padding: 1rem 2rem;
   border: 2px solid black;
+  background-color: lightgreen;
 }
 
 .pagNo {
@@ -115,7 +116,7 @@
   right: 45%;
   font-size: 1.1rem;
   color: white;
-  background: blueviolet;
+  background: black;
   text-decoration: none;
   padding: 1rem 1.5rem;
   border-radius: 4px;
